Changelog for Shake

    #259, discount time waiting for a resource in profiles
    #252, have the docs test configure not in dist
0.15.2
    #248, add another example of using cmd
    #245, initial support for fsatrace lint checking
    Reexport -<.> from filepath where available
    Hoogle #106, trigger on filepath version, not GHC version
    Add AddEnv and AddPath command options
    #243, close fds in child processes when spawning commands
    Make Ninja variable handling more accurate
0.15.1
    If you have Shakefile.hs, pass it all arguments without interp
    Add shakeArgsPrune and shakeArgsPruneWith
    #228, allow running cmd async by collecting the ProcessHandle
    Make getShakeOptions/processorCount of 0 return the used value
    #212, document how to get a full terminal with cmd
    #225, warn if there are no want/action statements
    #232, don't ignore phony order-only dependencies in Ninja
    #226, add escaping for GraphViz labels
    #227, add StdinBS for passing a bytestring as Stdin
    Make cmd Timeout call terminateProcess as well
0.15
    #203, make shakeFiles a directory rather than a file prefix
    #220, add getHashedShakeVersion helper
    #220, add shakeVersionIgnore to ignore version numbers
    #219, run Shakefile.hs from the shake binary
    #218, fix issues with incorrect unchanging with no digests
    #218, fix issue with ChangeModtimeAndDigest on unchanging files
    #216, work around GHC 7.10 RC3 bug 10176
    #213, add phonys, a predicate phony rule
    Add CmdTime and CmdLine results to cmd/command
    Fix parseMakefile for words with multiple escapes in them
    #205, add WithStdout, like WithStderr
    #27, add support for capturing Stdout/Stderr with bytestrings
    Add FileStdout/FileStderr to write a stream direct to a file
    #211, add Stdouterr to capture both Stdout and Stderr streams
    Require extra-1.1 (to use nubOrd)
    Generalise cmd to work with Maybe [String]
    Add unit for use with cmd