@@ -100,7 +100,7 @@ library
         js-jquery,
         js-flot,
         transformers >= 0.2,
-        extra >= 1.1,
+        extra >= 1.3,
         deepseq >= 1.1
 
     if flag(portable)
@@ -188,7 +188,7 @@ executable shake
         js-jquery,
         js-flot,
         transformers >= 0.2,
-        extra >= 0.7,
+        extra >= 1.3,
         deepseq >= 1.1
 
     if flag(portable)
@@ -231,7 +231,7 @@ test-suite shake-test
         js-flot,
         transformers >= 0.2,
         deepseq >= 1.1,
-        extra >= 0.7,
+        extra >= 1.3,
         QuickCheck >= 2.0
 
     if flag(portable)
